plugins {
    id 'java-library'
}
apply plugin: 'com.diffplug.spotless'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    // for jar fs
    api 'com.github.marschall:zipfilesystem-standalone:1.0.1'
    api files('libs/javac-new.jar')
	api files('libs/javac.jar')
    api files('libs/nb-javac-17.0.0.0-api.jar')
    api files('libs/nb-javac-17.0.0.0.jar')
    api files('libs/jrt-fs.jar')
}

spotless {
		java {
			target "**/*.java"
			googleJavaFormat()
			}
}

/*compileJava {
    options.compilerArgs += ["--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
                             "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"]
}*/
